--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <title>i need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-Dq72L03m.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CVOAbqDV.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg py-0">
-  <div class="container d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg py-0 shadow-sm">
+  <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -237,13 +237,13 @@ menuToggle.addEventListener("click", () => {
         </div>
       </div>
     </div>
-    <img src="/I-need-this/assets/graphic-01-B1ltvvLM.svg" alt="葉子裝飾圖" class="leaf1 d-none d-md-block">
+    <img src="/I-need-this/assets/graphic-01-twr_1kSX.svg" alt="葉子裝飾圖" class="leaf1 d-none d-md-block">
   </section>
 
   <!-- 分隔線 -->
   <div class="container">
     <div class="py-lg-10 py-0 text-center">
-      <img src="/I-need-this/assets/graphic-02-ACT-eLSf.svg" alt="" class="w-100">
+      <img src="/I-need-this/assets/graphic-02-q0LfWIkv.svg" alt="" class="w-100">
     </div>
   </div>
   <!-- section2 為日常加點新意 -->
@@ -261,7 +261,7 @@ menuToggle.addEventListener("click", () => {
         </div>
       </div>
     </div>
-    <img src="/I-need-this/assets/graphic-03-vCcHEDXT.svg" alt="葉子裝飾圖" class="leaf2 d-none d-md-block">
+    <img src="/I-need-this/assets/graphic-03-BvCkB4BF.svg" alt="葉子裝飾圖" class="leaf2 d-none d-md-block">
   </section>
 </div>
 <!-- section3 默默熱賣中 -->
@@ -317,7 +317,7 @@ menuToggle.addEventListener("click", () => {
         </div>
       </div>
     </div>
-    <img src="/I-need-this/assets/graphic-04-CK2CObqI.svg" alt="葉子裝飾圖" class="leaf3">
+    <img src="/I-need-this/assets/graphic-04-Ddozq0Pm.svg" alt="葉子裝飾圖" class="leaf3">
   </div>
 </section>
 <!-- section4 商品分類 -->
@@ -474,7 +474,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
+              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -561,7 +561,7 @@ menuToggle.addEventListener("click", () => {
     </p>
   </div>
 </footer>
-
+
     <script>
     document.querySelectorAll('.expandable-col').forEach(col => {
       col.addEventListener('click', function() {
