--- a/product-detail.html
+++ b/product-detail.html
@@ -18,16 +18,17 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin />
-    <title>商品細節｜I need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
+    
+    <title>商品細節｜I need this</title>
+    <script type="module" crossorigin src="/I-need-this/assets/main-Dq72L03m.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CVOAbqDV.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg py-0">
-  <div class="container d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg py-0 shadow-sm">
+  <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -144,13 +145,13 @@ menuToggle.addEventListener("click", () => {
       <nav class="pt-40">
         <ol class="d-flex">
           <li class="breadcrumb-item">
-            <a href="index.html" class="text-neutral-40">首頁</a>
+            <a href="index.html" class="text-neutral-40 ">首頁</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="product.html" class="text-neutral-40">所有商品</a>
+            <a href="product.html" class="text-neutral-40 ">所有商品</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="#" class="text-neutral-40">精油薰香</a>
+            <a href="#" class="text-neutral-40 ">精油薰香</a>
           </li>
           <li class="breadcrumb-item">
             <a href="#" class="text-primary-dark"
@@ -309,7 +310,7 @@ menuToggle.addEventListener("click", () => {
             </li>
             <li class="mb-40">
               <img
-                src="/I-need-this/assets/graphic-07-B6iIaSR6.svg"
+                src="/I-need-this/assets/graphic-07-BRrJFDQt.svg"
                 style="width: 96px; height: 16px"
                 alt="分隔線"
               />
@@ -324,7 +325,7 @@ menuToggle.addEventListener("click", () => {
             </li>
             <li class="mb-40">
               <img
-                src="/I-need-this/assets/graphic-07-B6iIaSR6.svg"
+                src="/I-need-this/assets/graphic-07-BRrJFDQt.svg"
                 style="width: 96px; height: 16px"
                 alt="分隔線"
               />
@@ -385,7 +386,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
+              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -473,6 +474,6 @@ menuToggle.addEventListener("click", () => {
   </div>
 </footer>
 
-
+
   </body>
 </html>
