--- a/product.html
+++ b/product.html
@@ -8,19 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../assets/css/all.css">
-    <link rel="stylesheet" href="../assets/css/product.css">
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-    <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-Dq72L03m.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CVOAbqDV.css">
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-Cer1LA4-.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg py-0">
-  <div class="container d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg py-0 shadow-sm">
+  <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -132,7 +131,7 @@ menuToggle.addEventListener("click", () => {
 });
 </script>
 
-   <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="container d-none d-sm-none d-md-none d-lg-block mt-3 py-40">
+   <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="container d-none d-sm-none d-md-none d-lg-block mt-4 ">
   <ol class="breadcrumb text-t-m">
     <li class="breadcrumb-item "><a href="#" class="neu40 text-decoration-none">首頁</a></li>
     <li class="breadcrumb-item active breadcrumb-item-color " aria-current="page">所有商品</li>
@@ -217,20 +216,20 @@ menuToggle.addEventListener("click", () => {
                 </div>
              </div>
             <div class="col-lg-9 ">
-              <div class="mb-40 d-lg-flex justify-content-around">
+              <div class="mb-8 d-lg-flex justify-content-around">
 
                 <h3 class="h3 me-auto d-none d-sm-none d-md-none d-lg-block" >所有商品</h3><span class="text-t-m ">共有 17,204 項</span>
               </div>
                 
                 <div class="row row-cols-2 row-cols-lg-3 g-4 ">
                     <div class="col">
-                        <div class="card h-100 border-0">
+                        <div class="card h-100 border-0 " >
                             <a href="product-detail.html" class="link-dark text-decoration-none">
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil1.jpg?raw=true" class="card-img-top" alt="oil1">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">森呼吸</p>
-                                    <h5 class="card-title h5">森林系木質精油</h5>
+                                    <p class="text-t-r neu60 mb-1">森呼吸</p>
+                                    <h5 class="card-title h5 mb-1">森林系木質精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>
                             </a>
                             </div>
@@ -242,8 +241,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil2.jpg?raw=true" class="card-img-top" alt="oil2">
                                 <div class="card-body text-start">
-                                    <p class="text-t-r neu60">靜夜語</p>
-                                    <h5 class="card-title h5">助眠放鬆精油</h5>
+                                    <p class="text-t-r neu60 mb-1">靜夜語</p>
+                                    <h5 class="card-title h5 mb-1">助眠放鬆精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                            
                                 </div>
                             </a>
@@ -255,8 +254,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil3.jpg?raw=true" class="card-img-top" alt="oil3">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">日光森森</p>
-                                    <h5 class="card-title h5">提振早晨精油</h5>
+                                    <p class="text-t-r neu60 mb-1">日光森森</p>
+                                    <h5 class="card-title h5 mb-1">提振早晨精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -268,8 +267,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil4.png?raw=true" class="card-img-top " alt="oil4">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">晨光之書</p>
-                                    <h5 class="card-title h5">靈感專注精油</h5>
+                                    <p class="text-t-r neu60 mb-1">晨光之書</p>
+                                    <h5 class="card-title h5 mb-1">靈感專注精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -281,8 +280,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil5.jpg?raw=true" class="card-img-top" alt="oil5">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">櫻霞落日</p>
-                                    <h5 class="card-title h5">療癒少女系精油</h5>
+                                    <p class="text-t-r neu60 mb-1">櫻霞落日</p>
+                                    <h5 class="card-title h5 mb-1">療癒少女系精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -294,8 +293,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil6.jpg?raw=true" class="card-img-top" alt="oil6">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">琥珀之夜</p>
-                                    <h5 class="card-title h5">溫感香調精油</h5>
+                                    <p class="text-t-r neu60 mb-1">琥珀之夜</p>
+                                    <h5 class="card-title h5 mb-1">溫感香調精油</h5>
                                     <h6 class="h6 pdark">NT$ 399</h6>                     
                                 </div>
                             </a>
@@ -307,8 +306,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil7.png?raw=true" class="card-img-top" alt="oil7">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">幻光晨曦</p>
-                                    <h5 class="card-title h5">清新能量精油</h5>
+                                    <p class="text-t-r neu60 mb-1">幻光晨曦</p>
+                                    <h5 class="card-title h5 mb-1">清新能量精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -320,8 +319,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil8.jpg?raw=true" class="card-img-top" alt="oil8">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">清新檸香</p>
-                                    <h5 class="card-title h5">浪漫微甜精油</h5>
+                                    <p class="text-t-r neu60 mb-1">清新檸香</p>
+                                    <h5 class="card-title h5 mb-1">浪漫微甜精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -333,8 +332,8 @@ menuToggle.addEventListener("click", () => {
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil9.png?raw=true" class="card-img-top" alt="oil9">
                                 <div class="card-body">
-                                    <p class="text-t-r neu60">琉璃秘境</p>
-                                    <h5 class="card-title h5">冥想放空精油</h5>
+                                    <p class="text-t-r neu60 mb-1">琉璃秘境</p>
+                                    <h5 class="card-title h5 mb-1">冥想放空精油</h5>
                                     <h6 class="h6 pdark">NT$ 599</h6>                     
                                 </div>
                             </a>
@@ -342,18 +341,18 @@ menuToggle.addEventListener("click", () => {
                     </div>
                 </div>
                 <nav aria-label="Page navigation example ">
-                    <ul class="pagination justify-content-center text-t-m mt-40 mb-72  ">
-                        <li class="page-item disabled">
-                            <a class="page-link neu40" href="#" aria-label="Previous">
+                    <ul class="pagination justify-content-center text-t-m mt-8 mb-11  ">
+                        <li class="page-item disabled ">
+                            <a class="page-link neu40 me-7 p-4" href="#" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                             </a>
                         </li>
-                        <li class="page-item active "><a class="page-link bg-success" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link page-neu80" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link page-neu80" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link page-neu80" href="#">4</a></li>
-                        <li class="page-item">
-                            <a class="page-link neu80" href="#" aria-label="Next">
+                        <li class="page-item active "><a class="page-link bg-success p-4" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link page-neu80 p-4" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link page-neu80 p-4" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link page-neu80 p-4" href="#">4</a></li>
+                        <li class="page-item ">
+                            <a class="page-link neu80 ms-7 p-4" href="#" aria-label="Next">
                             <span aria-hidden="true">></span>
                             </a>
                         </li>
@@ -385,7 +384,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
+              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -472,7 +471,7 @@ menuToggle.addEventListener("click", () => {
     </p>
   </div>
 </footer>
-
+
     
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
   </body>
