--- a/brand.html
+++ b/brand.html
@@ -28,15 +28,15 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-Dq72L03m.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CVOAbqDV.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg py-0">
-  <div class="container d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg py-0 shadow-sm">
+  <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -190,7 +190,7 @@ menuToggle.addEventListener("click", () => {
               class="story-content d-flex justify-content-center align-items-center"
             >
               <img
-                src="/I-need-this/assets/graphic-05-X4hHDHDV.svg"
+                src="/I-need-this/assets/graphic-05-tbKHsuN8.svg"
                 alt="左側橄欖葉裝飾"
                 class="leaf-decoration d-none d-md-block"
               />
@@ -205,7 +205,7 @@ menuToggle.addEventListener("click", () => {
                 </p>
               </div>
               <img
-                src="/I-need-this/assets/graphic-06-DsKVYivO.svg"
+                src="/I-need-this/assets/graphic-06-Do3FDvN_.svg"
                 alt="右側橄欖葉裝飾"
                 class="leaf-decoration d-none d-md-block"
               />
@@ -283,7 +283,7 @@ menuToggle.addEventListener("click", () => {
         </div>
       </main>
     </div>
-
+
     <footer
   style="
     background-image: url(https://github.com/a50134/project/blob/main/img/footer-bg.png?raw=true);
@@ -303,7 +303,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
+              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -391,6 +391,6 @@ menuToggle.addEventListener("click", () => {
   </div>
 </footer>
 
-
+
   </body>
 </html>
