--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <ul class="navbar-nav d-none d-lg-flex align-items-center mb-0">
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="brand.html">品牌介紹</a></li>
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="product.html">所有商品</a></li>
-        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="product.html"><span class="material-icons">shopping_cart</span></a></li>
+        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="checkout.html"><span class="material-icons">shopping_cart</span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle btn-pdark px-6 py-7" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             註冊 / 登入
