--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
       rel="stylesheet"
-    />
+      href="../assets/scss/base/_reset-1.scss">
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
+      rel="stylesheet"/>
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin />
     <title>商品細節｜I need this</title>
     <script type="module" src="/main.js"></script>
   </head>
+
+  <style>
+
+  </style>
+  
   <body>
     <%- include('./layout/header.ejs') %>
 
@@ -37,7 +43,7 @@
             <a href="#" class="text-neutral-40">精油薰香</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="#" class="text-primary-dark"
+            <a href="product-detail.html" class="text-primary-dark"
               >「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感</a
             >
           </li>
@@ -47,7 +53,7 @@
 
     <main class="container">
       <div class="row py-64 py-md-16">
-        <div class="col-6 col-md-4">
+        <div class="col-lg-6 col-md-4">
           <div class="product-row me-24 py-md-32">
             <div class="product-col product-img-md mb-24">
               <img
@@ -69,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-lg-6 col-md-4">
           <div class="mb-32 py-md-16">
             <h1 class="h2 mb-20 py-8 border-b-neutral-20">
               「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感
@@ -253,6 +259,6 @@
     <%- include('./layout/footer.ejs') %>
 
     <script type="module" src="/main.js"></script>
-    <script type="module" src="/main.js"></script>
+
   </body>
 </html>
