--- a/product-detail.html
+++ b/product-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
       rel="stylesheet"
@@ -20,8 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin />
     
     <title>商品細節｜I need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-ccZImUNY.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-C08aPYh9.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-ZP5wANBm.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-BRgM8i9I.css">
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-detail-D0fh3uF9.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0 shadow-sm">
@@ -141,7 +143,7 @@ menuToggle.addEventListener("click", () => {
 </script>
 
 
-    <div class="container py-md-16">
+    <div class="container py-md-16 mt-3 mb-8">
       <nav class="pt-40">
         <ol class="d-flex">
           <li class="breadcrumb-item">
@@ -164,7 +166,7 @@ menuToggle.addEventListener("click", () => {
 
     <main class="container">
       <div class="row py-64 py-md-16">
-        <div class="col-6 col-md-4">
+        <div class="col-lg-6 col-md-4">
           <div class="product-row me-24 py-md-32">
             <div class="product-col product-img-md mb-24">
               <img
@@ -186,9 +188,9 @@ menuToggle.addEventListener("click", () => {
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-lg-6 col-md-4">
           <div class="mb-32 py-md-16">
-            <h1 class="h2 mb-20 py-8 border-b-neutral-20">
+            <h1 class="h2 mb-20 py-8 border-b-neutral-20 ">
               「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感
             </h1>
             <p class="h5 mb-40">NT$599</p>
@@ -251,7 +253,7 @@ menuToggle.addEventListener("click", () => {
       </div>
 
       <ul
-        class="d-flex justify-around align-center py-16 mb-40 fwn-md o-x-scroll-md"
+        class="d-flex justify-around align-center py-16 mb-40 fwn-md o-x-scroll-md mt-8"
       >
         <li class="tab-item active">
           <a href="#">
@@ -296,11 +298,11 @@ menuToggle.addEventListener("click", () => {
       </ul>
 
       <div class="row">
-        <div class="col-7 col-md-4">
+        <div class="col-lg-7 col-md-4">
           <ul>
             <li class="mb-40 product-info-item">
               <p class="text-primary-100">＃一開門就想到的味道</p>
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 你有多久，沒有好好深呼吸？
               </h4>
               <p class="text-neutral-60">
@@ -316,7 +318,7 @@ menuToggle.addEventListener("click", () => {
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 🏡 居家儀式感，從味道開始
               </h4>
               <p class="text-neutral-60">
@@ -331,7 +333,7 @@ menuToggle.addEventListener("click", () => {
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">內含配方</h4>
+              <h4 class="py-3 product-info-title">內含配方</h4>
               <p class="text-neutral-60">三種無添加的天然精油：</p>
               <ul class="text-neutral-60 ps-3">
                 <li>· 檜木：穩定情緒，帶來大地木質調</li>
@@ -344,18 +346,18 @@ menuToggle.addEventListener("click", () => {
             </li>
           </ul>
         </div>
-        <div class="col-5 col-md-4">
-          <div class="bgc-green p-24 mb-md-32">
-            <h3 class="h5 mb-16">規格說明（範例）</h3>
-            <div class="border-b-neutral-40 mb-16"></div>
+        <div class="col-lg-5 col-md-4">
+          <div class="bgc-green p-6 mb-md-32" style="background-color: #F6F9EB;">
+            <h3 class="h5 mb-16 mb-4">規格說明（範例）</h3>
+            <div class="border-b-neutral-40  mb-16"></div>
             <ul class="text-primary-dark">
-              <li class="mb-16">
+              <li class="mb-16 mt-4 mb-4">
                 容量：<span class="bold">10ml / 20ml 滴瓶裝</span>
               </li>
-              <li class="mb-16">
+              <li class="mb-16 mb-4">
                 用法：<span class="bold">搭配擴香石、水氧機或手帕滴香使用</span>
               </li>
-              <li class="mb-16">
+              <li class="mb-16 mb-4">
                 保存期限：<span class="bold">三年，建議半年內使用完最佳</span>
               </li>
               <li>
