修改商品細節

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -7,6 +7,18 @@
     <link
       rel="stylesheet"
       href="../assets/scss/base/_reset-1.scss">
+<link
+      rel="stylesheet"
+      href="../assets/scss/base/_base.scss">
+<link
+      rel="stylesheet"
+      href="..//assets/scss/components/_button.scss">
+<link
+      rel="stylesheet"
+      href="..//helpers._utils-2.scss">
+<link
+      rel="stylesheet"
+      href="../assets/scss/pages/_product-detail.scss">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
@@ -23,10 +35,6 @@
     <title>商品細節｜I need this</title>
     <script type="module" src="/main.js"></script>
   </head>
-
-  <style>
-
-  </style>
   
   <body>
     <%- include('./layout/header.ejs') %>
